# hunkpick

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  codecov.yml
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/resolve-release-tag/: action.yml
.github/workflows/: audit.yml  ci.yml  release.yml
docs/ADR/: 0001-pure-diff-filter.md  0002-per-file-hunk-addressing.md  0003-non-overlapping-auto-split.md  0004-result-diff-verification.md  0005-byte-core-and-input-validation.md  0006-input-source-and-size-limit.md  0007-content-id-and-wildcard-addressing.md  0008-added-line-range-addressing.md  0009-changed-line-addressing-supersedes-range.md  README.md
scripts/: check-changelog.sh  package-archive.sh  release-validate-tag.sh  verify-archive.sh
src/: cli.rs  emit.rs  error.rs  lib.rs  list.rs  main.rs  model.rs  parser.rs  select.rs  split.rs  subhunk_id.rs  validate.rs
tests/: cli.rs  edge_corpus.rs  encoding_input.rs  id_and_star.rs  input_source.rs  multi_file.rs  roundtrip.rs
tests/common/: mod.rs
