[package]
name = "hunkpick"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
authors = ["Vitaly Ostanin <vitaly.ostanin@gmail.com>"]
description = "Non-interactive unified-diff hunk picker and splitter"
license = "MIT"
repository = "https://github.com/VitalyOstanin/hunkpick"
keywords = ["diff", "patch", "hunk", "git", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
# Trim the published crate to source + README + LICENSE + CHANGELOG + tests.
# CI config, release scripts, design docs (ADRs), and contributor guides matter to
# repository contributors but not to crates.io consumers.
exclude = [
    ".github/",
    ".config/",
    "scripts/",
    "docs/",
    "CONTRIBUTING.md",
    "CLAUDE.md",
]

# cargo-binstall: fetch the prebuilt binary from the matching GitHub Release
# instead of compiling. The URL and in-archive layout mirror what
# scripts/package-archive.sh produces: an asset named
# `hunkpick-<version>-<target>.<ext>` whose single top-level directory
# `hunkpick-<version>-<target>/` holds the binary. The literal `.tar.gz`
# extension is spelled out (binstall's default `.tgz` suffix would not match),
# and `pkg-fmt` tells binstall how to extract it. Windows ships a `.zip`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
